# narrative-chunker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
narrative_chunker/: __init__.py
tests/: test_chunker.py
